# plastyfitting

./: .gitignore  GluSynapse_CICR.mod  PIPELINE.md  README.md  evaluate_cpre.py  get_cpre_cpost.py  main.py  pyproject.toml  test_cpre.py
archive/: JAX_CICR_Cpre_Test.py  cicr_minimal_copy.py  test_shapes.py
biodata/: recipe_dhuruva.csv  recipe_mod.csv  selected_paired_recordings.csv  visualize_diff.py
mod/: GluSynapse.mod
neuron_sims/: plot_stdp_curves_full.py  run_basis_pair.py  submit_basis.py
papers/: Caya-Bissonnette et al. - 2023 - Cellular Substrate of Eligibility Traces.md  Chindemi et al. - 2022 - A calcium-based plasticity model for predicting lo.md  GluSynapse_CICR.mod  Graupner and Brunel - 2007 - STDP in a bistable synapse model based on CaMKII a.md  Harvey and Svoboda - 2007 - Locally dynamic synaptic learning rules in pyramidal neuron dendrites.md  Hong and Ross - 2007 - Priming of intracellular calcium stores in rat CA1 pyramidal neurons.md  Li - 2023 - Differential behaviors of calcium-induced calcium release in one dimensional dendrite by Nernst–Plan.md  Lur and Higley 2015_ProteinG_and_intracellular_calcium_release.md  Lytton et al_1992_Ca_concentration dependant_ofSERCAactivity.md  Nevian and Sakmann - 2006 - Spine Ca2+ signaling in spike-timing-dependent plasticity (2).md  Neymotin et al. - 2015 - Neuronal Calcium Wave Propagation Varies with Changes in Endoplasmic Reticulum Parameters A Compute.md  cicr_equations.md  cicr_simple_equations.md  ras_svoboda.md  satoh et al2011, SERCApump.md
plastyfitting/: cicr_common_weighted.py
(+120 files in other folders)
