[project]
name = "plastyfitting"
version = "0.1.0"
description = "JAX-accelerated parameter fitting for CICR-extended calcium-based synaptic plasticity models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
]
